# rag-assistant

./: .gitignore  Policies.docx  README.md  SmartCare Hospital.docx  ingest.py  main.py  pyproject.toml  query.py  requirements.txt
