[project]
name = "rag-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docx>=0.2.4",
    "google-genai>=2.0.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-google-genai>=2.1.0",
    "langchain-pinecone>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "langsmith>=0.8.3",
    "pinecone>=7.0.0",
    "python-docx>=1.1.0",
    "python-dotenv>=1.0.0",
    "rank-bm25>=0.2.2",
    "typing-extensions>=4.15.0",
    "unstructured[docx]>=0.15.0",
]
